# nix-term-dims

./: Cargo.toml  README.md  default.nix  flake.nix  shell.nix
src/: lib.rs  main.rs
