[package]
name = "nix-terminal-dimensions"
version = "0.1.0"
edition = "2024"
authors = ["Joey Ezechiels"]
description = "A crate that uses ioctl to make it easy to query terminal dimensions."
license = "Apache-2.0"
rust-version = "1.85.0"
repository = "https://github.com/jjpe/nix-term-dimensions"
default-run = "nix-term-dims"

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }
libc = "0.2.171"

[[bin]]
name = "nix-term-dims"
path = "src/bin/main.rs"
